# ccmux-spinner

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-05-10-spinner-v0.2-pane-id.md
docs/superpowers/specs/: 2026-05-10-ccmux-spinner-design.md  2026-05-10-spinner-v0.2-pane-id.md
examples/: settings.env.example
src/ccmux_spinner/: __init__.py  cli.py  config.py  errors.py  monitor.py  pane.py  parser.py
tests/: conftest.py  test_cli.py  test_config.py  test_monitor.py  test_pane.py  test_parser.py  test_skeleton.py
